<resources>
    <string name="app_name">RAFSLAB-JSONGenerator</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="json_array">JSON Array</string>
    <string name="json_object">JSON Object</string>
    <string name="save_location">Save Location</string>
    <string name="unknown">Unknown</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="save_to_phone">Save to Phone</string>
</resources>