<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:textColor="@color/textColor"
        app:buttonTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:checked="true"
        android:text="@string/json_object"
        android:id="@+id/object"
        />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:textColor="@color/textColor"
        app:buttonTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/json_array"
        android:id="@+id/array"
        />
    <TextView
        android:focusable="true"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_location"
        android:textSize="16sp"
        app:drawableTint="@color/textActionBarColor"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:drawableEndCompat="@drawable/ic_folder"
        />
    <TextView
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="14sp"
        />

</LinearLayout>